feat: implement functions for pages

--- a/admin.html
+++ b/admin.html
@@ -11,9 +11,8 @@
     <h1 class="header__title">Личный кабинет</h1>
     <div class="header__admin-info">
       <span class="header__admin-name">Админ</span>
-      <!-- <div class="header__admin-avatar"></div> -->
       <div class="header__admin-avatar">
-        <button class="button button--logout">Выйти</button>
+        <button onclick="logout()" type="button" class="button button--logout">Выйти</button>
       </div>
     </div>
   </header>
@@ -24,34 +23,21 @@
     </div>
 
     <div class="product-list">
-      <div class="product-list__item">
-        <span class="product-list__name">Название товара</span>
-        <span class="product-list__price">Цена</span>
-        <span class="product-list__quantity">Кол-во</span>
-        <span class="product-list__remove">X</span>
-      </div>
-
-      <div class="product-list__item">
-        <span class="product-list__name">Название товара</span>
-        <span class="product-list__price">Цена</span>
-        <span class="product-list__quantity">Кол-во</span>
-        <span class="product-list__remove">X</span>
-      </div>
     </div>
 
-    <!-- Modal -->
     <div id="addProductModal" class="modal">
-      <div class="modal__content">
+      <form onsubmit="saveProduct(event)" class="modal__content">
         <span class="modal__close" id="close-modal">&times;</span>
         <div class="modal__title">Добавить товар</div>
-        <input type="text" id="product-name" class="modal__input" placeholder="Название">
-        <input type="number" id="product-quantity" class="modal__input" placeholder="Количество">
-        <input type="number" id="product-price" class="modal__input" placeholder="Цена">
+        <input type="text" id="product-name" class="modal__input" placeholder="Название" required>
+        <input type="number" id="product-quantity" class="modal__input" placeholder="Количество" required>
+        <input type="text" pattern="[0-9,\.]+" id="product-price" class="modal__input" placeholder="Цена" required>
         <button class="modal__button" id="save-button">Сохранить</button>
-      </div>
+        <span class="modal__error"></span>
+      </form>
     </div>
   </main>
 
-  <script src="js/script.js"></script>
+  <script src="js/admin.js"></script>
 </body>
 </html>
